fixed issues on mobile with testimonials

--- a/style.css
+++ b/style.css
@@ -428,7 +428,7 @@ div.category-titles {
 }
 
 div.testimonials {
-    max-height: 15rem;
+    height:auto;
     width:75%;
     max-width:1000px;
     margin-right: auto;
@@ -442,11 +442,14 @@ div.testimonial_quote {
 }
 
 div.testimonial_wrapper, div.testimonial_slider_instance {
-    height: 100% !important;
+    height: auto !important;
+    position: relative !important;
 }
 
 div.testimonial_slideri {
     height: auto !important;
+    float: none !important;
+    margin: 0 0 !important;
 }
 
 span.testimonial_avatar img {
@@ -737,7 +740,6 @@ li.menu-item.current-menu-item > .shiftnav-target {
     }
 
     div.testimonials {
-        max-height: 15rem;
         width:100%;
         padding: 1rem 1rem;
     }
@@ -975,8 +977,6 @@ li.menu-item.current-menu-item > .shiftnav-target {
     }
 
     div.testimonials {
-        max-height: 100%;
-        height:100%;
         width:100%;
         padding: 1rem 1rem;
     }
